@@ -18,8 +18,8 @@ $cs_main = array( 'charset'         => $charset,
                   'public'          => 1,
                   'img_path'        => 'crystal_project',
                   'img_ext'         => 'png',
-                  'version_name'    => '2010.0 RC 1',
-                  'version_date'    => '2010-07-07');
+                  'version_name'    => '2010.0 DEV3',
+                  'version_date'    => '2010-07-08');
 
 require_once 'system/core/functions.php';
 
