@@ -1,6 +1,11 @@
 CHANGELOG
 --------------------------
 
+ClanSphere 2010.0 Final >> 2010-07-XX
+___________________________________________________________
+
+
+
 ClanSphere 2010.0 RC 1 >> 2010-07-07
 ___________________________________________________________
 
